Maze Gen actor created using the start button of the main menu
-When the start button of the main menu is clicked, the main menu is removed from the screen and the maze gen actor is spawned.
-Currently, only a print string is the only active node in the maze gen actor for debugging purposes.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=Action_RPG
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
+EditorStartupMap=/Game/_Main/Maps/Game_Map.Game_Map
 GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
 TransitionMap=
 bUseSplitscreen=True
